--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -183,10 +183,6 @@ nav {
     }
 }
 
-#main-project-2 img{
-    object-position: right;
-}
-
 .additional-projects-container {
     padding: 8rem 10vw;
     
